# news_feed

./: AGENTS.md  README.md  pyproject.toml  requirements.txt  sources.json  sources.yaml
.cache/: state.json
.github/workflows/: build.yml
data/: classifiers.csv  classifiers_map.csv  sources.yaml
docs/: index.html  unified.json
github/workflows/: build.yml
scripts/: __init__.py  aggregate.py  build.sh  http_client.py  metrics.py  url_filters.py
src/: build.py  date_utils.py  sources.py
src/newsfeed/: __init__.py  __main__.py  build.py  dateparse_ru.py  fetch.py
src/newsfeed/adapters/: generic.py
src/newsfeed/sources/: __init__.py  _common.py  ancb.py  eec.py  erzrf.py  faufcc.py  gge.py  gostinfo.py  government.py  interfax_realty.py  metalinfo.py  minfin.py  minstroy.py  notim.py  pnp.py  rg.py  ria_realty.py  ria_stk.py  stroygaz.py
src/newsfeed/utils/: http.py  time.py
src/sources/: base.py  erzrf.py  generic_html.py  government.py  interfax_realty.py  metalinfo.py  pnp.py  ria_realty.py  stroygaz.py
src/util/: dates.py  html.py  http.py  rss.py
tests/: test_amp_whitelist.py  test_content_extract.py  test_http_client.py  test_merge.py  test_metrics_tool.py  test_url_filters.py
